--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Slider - Start Bootstrap Template</title>
+    <title>CHAINErgy</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -110,8 +110,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>Full Slider by Start Bootstrap</h1>
-                <p>The background images for the slider are set directly in the HTML using inline CSS. The rest of the styles for this template are contained within the <code>full-slider.css</code>file.</p>
+                <h1>CHAINErgy</h1>
+                <p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>
             </div>
         </div>
 
@@ -121,7 +121,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; CHAINErgy - by Desire Yavro 2016</p>
                 </div>
             </div>
             <!-- /.row -->
