--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">CHAINErgy</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -74,23 +74,24 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <!--<div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>-->
+                <div class="fill" style="bckg.jpeg"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2>Decentralising the Energy Trading Market from the Suplier to the User. At the reach of a finger</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="fill" style="iphone_cutout_home-screen.png"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="fill" style="the-team.png"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2>The (growing) team</h2>
                 </div>
             </div>
         </div>
@@ -110,8 +111,25 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>CHAINErgy</h1>
-                <p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>
+                <h1>The Pain</h1>
+                <!--<p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>-->
+                <ul>
+                    <li>Power imbalance between the energy suppliers and consumers</li>
+                    <li>Trust issues between both parties</li>
+                    <li>Lack of reward to consumers</li>
+                    <li>Infrastructures subject to recurrent risk of cyberattacks</li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+        
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>The Solution</h1>
+                <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
             </div>
         </div>
 
@@ -121,7 +139,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; CHAINErgy - by Desire Yavro 2016</p>
+                    <p>Copyright &copy; CHAINErgy 2016 - by Desire Yavro</p>
                 </div>
             </div>
             <!-- /.row -->
