--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="http://m.me/startupmeifyoucan">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -111,7 +111,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>The Pain</h1>
+                <h1 class="title" style="color:#0000FF">The Pain</h1>
                 <!--<p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>-->
                 <ul>
                     <li>Power imbalance between the energy suppliers and consumers</li>
@@ -122,13 +122,13 @@
             </div>
         </div>
 
-        <hr>
+        <br>
         
     <div class="container">
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>The Solution</h1>
+                <h1 class="title" style="color:#0000FF">The Solution</h1>
                 <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
             </div>
         </div>
@@ -139,7 +139,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; CHAINErgy 2016 - by Desire Yavro</p>
+                    <p>Copyright &copy; CHAINErgy 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
                 </div>
             </div>
             <!-- /.row -->
