--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="When local eco-friendly energy production meets the blockchain technology">
 
     <title>CHAINErgy</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/favicon.png">
+    <meta name="keywords" content="decentralised app, iPhone, Android, blackberry, jQuerymobile, kindle, ipad, blockchain, Google, community, energy, renewable">
+    <meta name="robots" content="all">
+    <link rel="icon" href="img/logo57x57.png">
+    <link rel="apple-touch-icon" href="img/logo57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
