--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>CHAINErgy</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/favicon.ico">
     <meta name="keywords" content="decentralised app, iPhone, Android, blackberry, jQuerymobile, kindle, ipad, blockchain, Google, community, energy, renewable">
     <meta name="robots" content="all">
     <link rel="icon" href="img/logo57x57.png">
