--- a/index.html
+++ b/index.html
@@ -84,21 +84,24 @@
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <!--<div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>-->
-                <div class="fill" style="bckg.jpeg"></div>
+                <img src="img/bckg.jpeg" alt="">
+                <!--<div class="fill" style="img/bckg.jpeg"></div>-->
                 <div class="carousel-caption">
                     <h2>Decentralising the Energy Trading Market from the Suplier to the User. At the reach of a finger</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="iphone_cutout_home-screen.png"></div>
+                <img src="img/iphone_cutout_home-screen.png" alt="">
+                <!--<div class="fill" style="img/iphone_cutout_home-screen.png"></div>-->
                 <div class="carousel-caption">
                     <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="the-team.png"></div>
+                <img src="img/the-team.png" alt="">
+                <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
                     <h2>The (growing) team</h2>
                 </div>
