--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="When local eco-friendly energy production meets the blockchain technology">
 
-    <title>Full Slider - Start Bootstrap Template</title>
+    <title>CHAINErgy</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/favicon.ico">
+    <meta name="keywords" content="decentralised app, iPhone, Android, blackberry, jQuerymobile, kindle, ipad, blockchain, Google, community, energy, renewable">
+    <meta name="robots" content="all">
+    <link rel="icon" href="img/logo57x57.png">
+    <link rel="apple-touch-icon" href="img/logo57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/logo72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">CHAINErgy</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,7 +61,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="http://m.me/startupmeifyoucan">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -73,23 +83,27 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <!--<div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>-->
+                <img src="img/bckg.jpeg" alt="">
+                <!--<div class="fill" style="img/bckg.jpeg"></div>-->
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2>Decentralising the Energy Trading Market from the Suplier to the User. At the reach of a finger</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <img src="img/iphone_cutout_home-screen.png" alt="">
+                <!--<div class="fill" style="img/iphone_cutout_home-screen.png"></div>-->
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <img src="img/the-team.png" alt="">
+                <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2>The (growing) team</h2>
                 </div>
             </div>
         </div>
@@ -109,8 +123,25 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1>Full Slider by Start Bootstrap</h1>
-                <p>The background images for the slider are set directly in the HTML using inline CSS. The rest of the styles for this template are contained within the <code>full-slider.css</code>file.</p>
+                <h1 class="title" style="color:#0000FF">The Pain</h1>
+                <!--<p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>-->
+                <ul>
+                    <li>Power imbalance between the energy suppliers and consumers</li>
+                    <li>Trust issues between both parties</li>
+                    <li>Lack of reward to consumers</li>
+                    <li>Infrastructures subject to recurrent risk of cyberattacks</li>
+                </ul>
+            </div>
+        </div>
+
+        <br>
+        
+    <div class="container">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title" style="color:#0000FF">The Solution</h1>
+                <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
             </div>
         </div>
 
@@ -120,7 +151,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; CHAINErgy 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
                 </div>
             </div>
             <!-- /.row -->
