--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#the-pain">About</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
