--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#the-pain">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
@@ -123,7 +123,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="title" style="color:#0000FF">The Pain</h1>
+                <h1 class="title" style="color:#0000FF">About</h1>
                 <!--<p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>-->
                 <ul>
                     <li>Power imbalance between the energy suppliers and consumers</li>
