--- a/index.html
+++ b/index.html
@@ -124,13 +124,15 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="title" style="color:#0000FF">About</h1>
-                <!--<p>Decentralizing the Energy Trade Market by bringing it back from the Energy Supplier to the Users, at the reach of a finger</code>file.</p>-->
+                <h3>The Pain</h3>
                 <ul>
                     <li>Power imbalance between the energy suppliers and consumers</li>
                     <li>Trust issues between both parties</li>
                     <li>Lack of reward to consumers</li>
                     <li>Infrastructures subject to recurrent risk of cyberattacks</li>
                 </ul>
+                <h3>The Solution</h3>
+                <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
             </div>
         </div>
 
@@ -140,8 +142,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="title" style="color:#0000FF">The Solution</h1>
-                <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
+                <h1 class="title" style="color:#0000FF">Our Services</h1>
+                <p></p>
             </div>
         </div>
 
