--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" style="color:#0000FF">CHAINErgy</a>
+                <a href="http://chainergy.azurewebsites.net/"><img src="img/logo57x57.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">CHAINErgy</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -100,10 +100,10 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <img src="img/the-team.png" alt="">
+                <img src="img/BP_blockchain-assets.png" alt="">
                 <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
-                    <h2>The (growing) team</h2>
+                    <h2> </h2>
                 </div>
             </div>
         </div>
