--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <li>Infrastructures subject to recurrent risk of cyberattacks</li>
                 </ul>
                 <h3>The Solution</h3>
-                <p>Decentralise the energy market down to the prosumer & allow peer-to-peer energy transaction</p>
+                <p>Decentralising the energy market from the supplier down to the prosumer & allow peer-to-peer energy transaction</p>
             </div>
         </div>
 
