--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
     <link rel="icon" href="img/favicon.ico">
     <meta name="keywords" content="decentralised app, iPhone, Android, blackberry, jQuerymobile, kindle, ipad, blockchain, Google, community, energy, renewable">
     <meta name="robots" content="all">
-    <link rel="icon" href="img/logo57x57.png">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="img/png" href="img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="img/png" href="img/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="img/manifest.json">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    <!--<link rel="icon" href="img/logo57x57.png">
     <link rel="apple-touch-icon" href="img/logo57x57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/logo72x72.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>-->
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
