--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="When local eco-friendly energy production meets the blockchain technology">
+    <meta name="author" content="Multisensorial experience for deeper learning, product loyalty and entertainement">
 
-    <title>CHAINErgy</title>
+    <title>ProvAR</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://chainergy.azurewebsites.net/"><img src="img/logo57x57.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">CHAINErgy</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/logo57x57.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">ProvAR</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
