--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://provar.azurewebsites.net/"><img src="img/logo57x57.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">ProvAR</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">ProvAR</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,7 +68,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="http://m.me/startupmeifyoucan">Contact</a>
+                        <a href="http://m.me/293084701066328">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -94,23 +94,36 @@
                 <img src="img/bckg.jpeg" alt="">
                 <!--<div class="fill" style="img/bckg.jpeg"></div>-->
                 <div class="carousel-caption">
-                    <h2>Decentralising the Energy Trading Market from the Suplier to the User. At the reach of a finger</h2>
+                    <h2>Multisensorial experience for deeper learning, product loyalty and entertainement</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_home-screen.png" alt="">
-                <!--<div class="fill" style="img/iphone_cutout_home-screen.png"></div>-->
+                <img src="img/iphone_cutout_home-screen_1.png" alt="">
                 <div class="carousel-caption">
                     <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_home-screen_2.png" alt="">
+                <div class="carousel-caption">
+                    <h2>Scan the item</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_home-screen_3.png" alt="">
+                <div class="carousel-caption">
+                    <h2>See the item history through A.R.</h2>
+                </div>
+            </div>
+            <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <img src="img/BP_blockchain-assets.png" alt="">
+                <img src="img/the-team.png" alt="">
                 <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
-                    <h2> </h2>
+                    <h2>The team </h2>
                 </div>
             </div>
         </div>
@@ -126,7 +139,7 @@
     </header>
 
     <!-- Page Content -->
-    <div class="container">
+    <!--<div class="container">
 
         <div class="row">
             <div class="col-lg-12">
@@ -152,7 +165,7 @@
                 <h1 class="title" style="color:#0000FF">Our Services</h1>
                 <p></p>
             </div>
-        </div>
+        </div>-->
 
         <hr>
 
@@ -160,7 +173,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; CHAINErgy 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
+                    <p>Copyright &copy; PROVAR 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
                 </div>
             </div>
             <!-- /.row -->
