--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">ProvAR</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#dfe3ee">PROVAR</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,7 +94,42 @@
                 <img src="img/bckg.jpeg" alt="">
                 <!--<div class="fill" style="img/bckg.jpeg"></div>-->
                 <div class="carousel-caption">
-                    <h2>Multisensorial experience for deeper learning, product loyalty and entertainement</h2>
+                    <h2>Multisensorial experience for deeper learning product loyalty and entertainement</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-1.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-2.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-3.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-3.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-4.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
                 </div>
             </div>
             <div class="item">
