--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <img src="img/the-team.png" alt="">
+                <img src="img/provar-team.jpg" alt="">
                 <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
                     <h2>The team </h2>
