--- a/index.html
+++ b/index.html
@@ -127,21 +127,35 @@
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_home-screen_1.png" alt="">
+                <img src="img/iphone_cutout_0.png" alt="">
                 <div class="carousel-caption">
                     <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_home-screen_2.png" alt="">
+                <img src="img/iphone_cutout_1.png" alt="">
+                <div class="carousel-caption">
+                    <h2>Log in</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_2.png" alt="">
+                <div class="carousel-caption">
+                    <h2>via email or social network</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_3.png" alt="">
                 <div class="carousel-caption">
                     <h2>Scan the item</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_home-screen_3.png" alt="">
+                <img src="img/iphone_cutout_4.png" alt="">
                 <div class="carousel-caption">
                     <h2>See the item history through A.R.</h2>
                 </div>
