--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#dfe3ee">PROVAR</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#8b9dc3">PROVAR</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,7 +68,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="http://m.me/293084701066328">Contact</a>
+                        <a href="http://m.me/293084701066328">More...</a>
                     </li>
                 </ul>
             </div>
