--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="When local eco-friendly energy production meets the blockchain technology">
+    <meta name="author" content="Multisensorial experience for deeper learning, product loyalty and entertainement">
 
-    <title>CHAINErgy</title>
+    <title>ProvAR</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
     <meta name="keywords" content="decentralised app, iPhone, Android, blackberry, jQuerymobile, kindle, ipad, blockchain, Google, community, energy, renewable">
     <meta name="robots" content="all">
-    <link rel="icon" href="img/logo57x57.png">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="img/png" href="img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="img/png" href="img/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="img/manifest.json">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+    <!--<link rel="icon" href="img/logo57x57.png">
     <link rel="apple-touch-icon" href="img/logo57x57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/logo72x72.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/logo114x114.png"/>-->
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -49,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://chainergy.azurewebsites.net/"><img src="img/logo57x57.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#0000FF">CHAINErgy</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#8b9dc3">PROVAR</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -61,7 +68,7 @@
                         <a href="#">Services</a>
                     </li>
                     <li>
-                        <a href="http://m.me/startupmeifyoucan">Contact</a>
+                        <a href="http://m.me/293084701066328">More...</a>
                     </li>
                 </ul>
             </div>
@@ -87,23 +94,78 @@
                 <img src="img/bckg.jpeg" alt="">
                 <!--<div class="fill" style="img/bckg.jpeg"></div>-->
                 <div class="carousel-caption">
-                    <h2>Decentralising the Energy Trading Market from the Suplier to the User. At the reach of a finger</h2>
+                    <h2>Multisensorial experience for deeper learning product loyalty and entertainement</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_home-screen.png" alt="">
-                <!--<div class="fill" style="img/iphone_cutout_home-screen.png"></div>-->
+                <img src="img/provar-1.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-2.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-3.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/provar-4.png" alt="">
+                <div class="carousel-caption">
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_0.png" alt="">
                 <div class="carousel-caption">
                     <h2>App home screen</h2>
                 </div>
             </div>
             <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_1.png" alt="">
+                <div class="carousel-caption">
+                    <h2>Log in</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_2.png" alt="">
+                <div class="carousel-caption">
+                    <h2>via email or social network</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_3.png" alt="">
+                <div class="carousel-caption">
+                    <h2>Scan the item</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_4.png" alt="">
+                <div class="carousel-caption">
+                    <h2>See the item history through A.R.</h2>
+                </div>
+            </div>
+            <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <img src="img/BP_blockchain-assets.png" alt="">
+                <img src="img/provar-team.jpg" alt="">
                 <!--<div class="fill" style="img/the-team.png"></div>-->
                 <div class="carousel-caption">
-                    <h2> </h2>
+                    <h2>The team </h2>
                 </div>
             </div>
         </div>
@@ -119,7 +181,7 @@
     </header>
 
     <!-- Page Content -->
-    <div class="container">
+    <!--<div class="container">
 
         <div class="row">
             <div class="col-lg-12">
@@ -145,7 +207,7 @@
                 <h1 class="title" style="color:#0000FF">Our Services</h1>
                 <p></p>
             </div>
-        </div>
+        </div>-->
 
         <hr>
 
@@ -153,7 +215,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; CHAINErgy 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
+                    <p>Copyright &copy; PROVAR 2016 - by<a href="http://m.me/startupmeifyoucan"> Desire Yavro</a></p>
                 </div>
             </div>
             <!-- /.row -->
