--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_4.png" alt="">
                 <div class="carousel-caption">
-                    <h2>See the item history through A.R.</h2>
+                    <h2>See through A.R. the item history or composition</h2>
                 </div>
             </div>
             <div class="item">
