--- a/index.html
+++ b/index.html
@@ -161,6 +161,27 @@
                 </div>
             </div>
             <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_51.png" alt="">
+                <div class="carousel-caption">
+                    <h2>Need more suggestions? Message us</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_6.png" alt="">
+                <div class="carousel-caption">
+                    <h2>And let's have a chat!</h2>
+                </div>
+            </div>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <img src="img/iphone_cutout_7.png" alt="">
+                <div class="carousel-caption">
+                    <h2>How can we help? More images, personal selection?</h2>
+                </div>
+            </div>
+            <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
                 <img src="img/provar-team.jpg" alt="">
                 <!--<div class="fill" style="img/the-team.png"></div>-->
