--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
 
 <body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=137873573324007";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -70,6 +79,9 @@
                     <li>
                         <a href="http://m.me/293084701066328">More...</a>
                     </li>
+                    <!-- fb login button -->
+                    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -164,21 +176,21 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_51.png" alt="">
                 <div class="carousel-caption">
-                    <h2>Need more suggestions? Message us</h2>
+                    <h2>Need more suggestions? <a style="color:#3b5998"> FB Message us </a></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_6.png" alt="">
                 <div class="carousel-caption">
-                    <h2>And let's have a chat!</h2>
+                    <h2 style="color:#3b5998">And let's have a chat!</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <img src="img/iphone_cutout_7.png" alt="">
+                <img src="img/iphone_cutout_7.png" alt="https://www.facebook.com/Provar-293084701066328">
                 <div class="carousel-caption">
-                    <h2>How can we help? More images, personal selection?</h2>
+                    <h2 style="color:#3b5998">Check our FB page for new releases </h2>
                 </div>
             </div>
             <div class="item">
