--- a/index.html
+++ b/index.html
@@ -176,21 +176,21 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_51.png" alt="">
                 <div class="carousel-caption">
-                    <h2>Need more suggestions? <a style="color:#3b5998"> FB Message us </a></h2>
+                    <h2>Need more suggestions? <a style="color:#8b9dc3"> Message us </a></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_6.png" alt="">
                 <div class="carousel-caption">
-                    <h2 style="color:#3b5998">And let's have a chat!</h2>
+                    <h2 style="color:#8b9dc3">And let's have a chat!</h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_7.png" alt="https://www.facebook.com/Provar-293084701066328">
                 <div class="carousel-caption">
-                    <h2 style="color:#3b5998">Check our FB page for new releases </h2>
+                    <h2>Check our <a ref="https://www.facebook.com/Provar-293084701066328" style="color:#8b9dc3"> FB page </a>for new releases </h2>
                 </div>
             </div>
             <div class="item">
