--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="http://m.me/293084701066328">More...</a>
                     </li>
                     <!-- fb login button -->
-                    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+                    <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true"></div>
                     
                 </ul>
             </div>
