--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="author" content="Multisensorial experience for deeper learning, product loyalty and entertainement">
 
     <title>ProvAR</title>
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
@@ -176,21 +182,21 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_51.png" alt="">
                 <div class="carousel-caption">
-                    <h2>Need more suggestions? <a style="color:#8b9dc3"> Message us </a></h2>
+                    <h2>Need more suggestions? <a href="http://m.me/293084701066328" class="btn btn-primary" role="button">Message us</a></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_6.png" alt="">
                 <div class="carousel-caption">
-                    <h2 style="color:#8b9dc3">And let's have a chat!</h2>
+                    <h2>And let's have a <a href="https://www.facebook.com/Provar-293084701066328/" class="btn btn-primary" role="button">chat!</a></h2>
                 </div>
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
                 <img src="img/iphone_cutout_7.png" alt="https://www.facebook.com/Provar-293084701066328">
                 <div class="carousel-caption">
-                    <h2>Check our <a ref="https://www.facebook.com/Provar-293084701066328" style="color:#8b9dc3"> FB page </a>for new releases </h2>
+                    <h2>Check our <a href="https://www.facebook.com/Provar-293084701066328/" class="btn btn-primary" role="button">FB page </a>for new releases </h2>
                 </div>
             </div>
             <div class="item">
