--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="http://provar.azurewebsites.net/"><img src="img/favicon-32x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#8b9dc3">PROVAR</a>
+                <a href="http://provar.azurewebsites.net/"><img src="img/provar-logo87x32.png" alt="provar.io"></a>
+                <!--<a href="http://provar.azurewebsites.net/"><img src="img/favicon-87x32.png" alt=""></a> <a class="navbar-brand" href="#" style="color:#8b9dc3">PROVAR</a>-->
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
